# ds-project-template

./: .pre-commit-config.yaml  .template_gitignore  CONTRIBUTION.md  Makefile  README.md  contribution_requirements.txt  cookiecutter.json  pytest.ini
template_tests/: test_notebook_init.py
{{cookiecutter.directory_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __util__.py  databricks_cluster_setup.json  pyproject.toml  pytest.ini
{{cookiecutter.directory_name}}/notebooks/: _init_.ipynb  example.ipynb
{{cookiecutter.directory_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.directory_name}}/tests/: test_util.py
